# mycobot280_movelt2

./: README.md  run_movelt2_assistant.sh
test_movelt2_mycobo280/: .setup_assistant  CMakeLists.txt  package.xml
test_movelt2_mycobo280/config/: firefighter.ros2_control.xacro  firefighter.srdf  firefighter.urdf.xacro  initial_positions.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
test_movelt2_mycobo280/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
